NetworkPolicy/dep.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: default
  labels:
    app: dep
spec:
    replicas: 3
    selector:
      matchLabels:
        name: app
    template:
      metadata:
        labels:
          name: app
      spec:
       serviceAccountName: test-service
       containers:
        - name: app
          image: nginx
          ports:
          - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    name: app
  type: ClusterIP
  ports:
   - port: 80
     targetPort: 80
     protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-networking
spec:
 podSelector:
   matchLabels:
     name: app
 policyTypes:
 - Ingress

 ingress:
  - from:
    - podSelector:
        matchLabels:
           name: app
    ports:
    - protocol: TCP
      port: 80
